<resources>
    <string name="app_name">FirstApplication</string>
    <string name="welcome">Welcome to the App!</string>
    <string name="lock">The App is LOCKED</string>
    <string name="unlock">The App is UNLOCKED</string>
    <string name="button_unlock">Unlock</string>
    <string name="access">ACCESSCONTROL</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="submit">Submit</string>
</resources>
